kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: tasneemkhaled/backend:72
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: backend-storage
              mountPath: /app/data
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-pvc
